--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: minima
 author: Roman Alekseev
 description: Programming and architecture
+title: Мысли и комментарии о программировании, архитектуре, базах данных и противоречиях.
